stage/ulNoActionsParser.java
// $ANTLR 3.0.1 ulNoActions.g 2018-02-24 20:33:38

  import AST.*;
  import Types.*;
  import Environment.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ulNoActionsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "TYPE", "IF", "ELSE", "WHILE", "PRINT", "PRINTLN", "RETURN", "STRINGCONSTANT", "INTEGERCONSTANT", "FLOATCONSTANT", "CHARACTERCONSTANT", "TRUE", "FALSE", "LOWER", "UPPER", "DIGIT", "WS", "COMMENT", "'('", "')'", "','", "'{'", "'}'", "';'", "'['", "']'", "'='", "'=='", "'<'", "'+'", "'-'", "'*'"
    };
    public static final int PRINT=9;
    public static final int PRINTLN=10;
    public static final int COMMENT=22;
    public static final int RETURN=11;
    public static final int UPPER=19;
    public static final int STRINGCONSTANT=12;
    public static final int ELSE=7;
    public static final int ID=4;
    public static final int WS=21;
    public static final int EOF=-1;
    public static final int TYPE=5;
    public static final int IF=6;
    public static final int CHARACTERCONSTANT=15;
    public static final int TRUE=16;
    public static final int FLOATCONSTANT=14;
    public static final int DIGIT=20;
    public static final int INTEGERCONSTANT=13;
    public static final int LOWER=18;
    public static final int WHILE=8;
    public static final int FALSE=17;

        public ulNoActionsParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[43+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ulNoActions.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }



    // $ANTLR start program
    // ulNoActions.g:35:1: program returns [Program p] : (f= function )* EOF ;
    public final Program program() throws RecognitionException {
        Program p = null;

        Function f = null;



          p = new Program();

        try {
            // ulNoActions.g:40:3: ( (f= function )* EOF )
            // ulNoActions.g:40:5: (f= function )* EOF
            {
            // ulNoActions.g:40:5: (f= function )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ulNoActions.g:40:7: f= function
            	    {
            	    pushFollow(FOLLOW_function_in_program45);
            	    f=function();
            	    _fsp--;
            	    if (failed) return p;
            	    if ( backtracking==0 ) {
            	       p.addElement(f); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program52); if (failed) return p;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return p;
    }
    // $ANTLR end program


    // $ANTLR start function
    // ulNoActions.g:43:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
    public final Function function() throws RecognitionException {
        Function f = null;

        FunctionDeclaration fd = null;

        FunctionBody fb = null;


        try {
            // ulNoActions.g:43:30: (fd= functionDecl fb= functionBody )
            // ulNoActions.g:44:3: fd= functionDecl fb= functionBody
            {
            pushFollow(FOLLOW_functionDecl_in_function71);
            fd=functionDecl();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_functionBody_in_function75);
            fb=functionBody();
            _fsp--;
            if (failed) return f;
            if ( backtracking==0 ) {
               f = new Function(fd, fb); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return f;
    }
    // $ANTLR end function


    // $ANTLR start functionDecl
    // ulNoActions.g:47:1: functionDecl returns [FunctionDeclaration fd] : t= compoundType i= identifier '(' fp= formalParameters ')' ;
    public final FunctionDeclaration functionDecl() throws RecognitionException {
        FunctionDeclaration fd = null;

        TypeNode t = null;

        Identifier i = null;

        FormalParameterList fp = null;


        try {
            // ulNoActions.g:47:46: (t= compoundType i= identifier '(' fp= formalParameters ')' )
            // ulNoActions.g:48:3: t= compoundType i= identifier '(' fp= formalParameters ')'
            {
            pushFollow(FOLLOW_compoundType_in_functionDecl95);
            t=compoundType();
            _fsp--;
            if (failed) return fd;
            pushFollow(FOLLOW_identifier_in_functionDecl99);
            i=identifier();
            _fsp--;
            if (failed) return fd;
            match(input,23,FOLLOW_23_in_functionDecl101); if (failed) return fd;
            pushFollow(FOLLOW_formalParameters_in_functionDecl105);
            fp=formalParameters();
            _fsp--;
            if (failed) return fd;
            match(input,24,FOLLOW_24_in_functionDecl107); if (failed) return fd;
            if ( backtracking==0 ) {
               fd = new FunctionDeclaration(t, i, fp); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fd;
    }
    // $ANTLR end functionDecl


    // $ANTLR start formalParameters
    // ulNoActions.g:51:1: formalParameters returns [FormalParameterList fpList] : (t= compoundType i= identifier (fp= moreFormals )* | );
    public final FormalParameterList formalParameters() throws RecognitionException {
        FormalParameterList fpList = null;

        TypeNode t = null;

        Identifier i = null;

        FormalParameter fp = null;



          fpList = new FormalParameterList();

        try {
            // ulNoActions.g:56:1: (t= compoundType i= identifier (fp= moreFormals )* | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TYPE) ) {
                alt3=1;
            }
            else if ( (LA3_0==24) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return fpList;}
                NoViableAltException nvae =
                    new NoViableAltException("51:1: formalParameters returns [FormalParameterList fpList] : (t= compoundType i= identifier (fp= moreFormals )* | );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // ulNoActions.g:57:3: t= compoundType i= identifier (fp= moreFormals )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters134);
                    t=compoundType();
                    _fsp--;
                    if (failed) return fpList;
                    pushFollow(FOLLOW_identifier_in_formalParameters138);
                    i=identifier();
                    _fsp--;
                    if (failed) return fpList;
                    if ( backtracking==0 ) {
                       fpList.addElement(new FormalParameter(t, i)); 
                    }
                    // ulNoActions.g:57:81: (fp= moreFormals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==25) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ulNoActions.g:57:83: fp= moreFormals
                    	    {
                    	    pushFollow(FOLLOW_moreFormals_in_formalParameters146);
                    	    fp=moreFormals();
                    	    _fsp--;
                    	    if (failed) return fpList;
                    	    if ( backtracking==0 ) {
                    	       fpList.addElement(fp); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // ulNoActions.g:59:3: 
                    {
                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fpList;
    }
    // $ANTLR end formalParameters


    // $ANTLR start moreFormals
    // ulNoActions.g:61:1: moreFormals returns [FormalParameter fp] : ',' t= compoundType i= identifier ;
    public final FormalParameter moreFormals() throws RecognitionException {
        FormalParameter fp = null;

        TypeNode t = null;

        Identifier i = null;


        try {
            // ulNoActions.g:61:41: ( ',' t= compoundType i= identifier )
            // ulNoActions.g:62:3: ',' t= compoundType i= identifier
            {
            match(input,25,FOLLOW_25_in_moreFormals173); if (failed) return fp;
            pushFollow(FOLLOW_compoundType_in_moreFormals177);
            t=compoundType();
            _fsp--;
            if (failed) return fp;
            pushFollow(FOLLOW_identifier_in_moreFormals181);
            i=identifier();
            _fsp--;
            if (failed) return fp;
            if ( backtracking==0 ) {
               fp = new FormalParameter(t, i); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end moreFormals


    // $ANTLR start functionBody
    // ulNoActions.g:65:1: functionBody returns [FunctionBody fb] : '{' (vd= varDecl )* (s= statement )* '}' ;
    public final FunctionBody functionBody() throws RecognitionException {
        FunctionBody fb = null;

        VariableDeclaration vd = null;

        Statement s = null;



          fb = new FunctionBody();

        try {
            // ulNoActions.g:70:3: ( '{' (vd= varDecl )* (s= statement )* '}' )
            // ulNoActions.g:70:5: '{' (vd= varDecl )* (s= statement )* '}'
            {
            match(input,26,FOLLOW_26_in_functionBody205); if (failed) return fb;
            // ulNoActions.g:70:9: (vd= varDecl )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==TYPE) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // ulNoActions.g:70:11: vd= varDecl
            	    {
            	    pushFollow(FOLLOW_varDecl_in_functionBody211);
            	    vd=varDecl();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	       fb.vdList.addElement(vd); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // ulNoActions.g:70:54: (s= statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID||LA5_0==IF||(LA5_0>=WHILE && LA5_0<=FALSE)||LA5_0==23||LA5_0==28) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ulNoActions.g:70:56: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody221);
            	    s=statement();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	       fb.sList.addElement(s); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,27,FOLLOW_27_in_functionBody227); if (failed) return fb;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fb;
    }
    // $ANTLR end functionBody


    // $ANTLR start varDecl
    // ulNoActions.g:73:1: varDecl returns [VariableDeclaration vd] : t= compoundType i= identifier ';' ;
    public final VariableDeclaration varDecl() throws RecognitionException {
        VariableDeclaration vd = null;

        TypeNode t = null;

        Identifier i = null;


        try {
            // ulNoActions.g:73:41: (t= compoundType i= identifier ';' )
            // ulNoActions.g:74:3: t= compoundType i= identifier ';'
            {
            pushFollow(FOLLOW_compoundType_in_varDecl247);
            t=compoundType();
            _fsp--;
            if (failed) return vd;
            pushFollow(FOLLOW_identifier_in_varDecl251);
            i=identifier();
            _fsp--;
            if (failed) return vd;
            match(input,28,FOLLOW_28_in_varDecl253); if (failed) return vd;
            if ( backtracking==0 ) {
               vd = new VariableDeclaration(t, i); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return vd;
    }
    // $ANTLR end varDecl


    // $ANTLR start compoundType
    // ulNoActions.g:77:1: compoundType returns [TypeNode tn] : (t= type | t= type '[' i= intLiteral ']' );
    public final TypeNode compoundType() throws RecognitionException {
        TypeNode tn = null;

        TypeNode t = null;

        IntegerLiteral i = null;


        try {
            // ulNoActions.g:77:35: (t= type | t= type '[' i= intLiteral ']' )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==TYPE) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ID) ) {
                    alt6=1;
                }
                else if ( (LA6_1==29) ) {
                    alt6=2;
                }
                else {
                    if (backtracking>0) {failed=true; return tn;}
                    NoViableAltException nvae =
                        new NoViableAltException("77:1: compoundType returns [TypeNode tn] : (t= type | t= type '[' i= intLiteral ']' );", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return tn;}
                NoViableAltException nvae =
                    new NoViableAltException("77:1: compoundType returns [TypeNode tn] : (t= type | t= type '[' i= intLiteral ']' );", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // ulNoActions.g:78:3: t= type
                    {
                    pushFollow(FOLLOW_type_in_compoundType274);
                    t=type();
                    _fsp--;
                    if (failed) return tn;
                    if ( backtracking==0 ) {
                       tn = t; 
                    }

                    }
                    break;
                case 2 :
                    // ulNoActions.g:79:5: t= type '[' i= intLiteral ']'
                    {
                    pushFollow(FOLLOW_type_in_compoundType284);
                    t=type();
                    _fsp--;
                    if (failed) return tn;
                    match(input,29,FOLLOW_29_in_compoundType286); if (failed) return tn;
                    pushFollow(FOLLOW_intLiteral_in_compoundType290);
                    i=intLiteral();
                    _fsp--;
                    if (failed) return tn;
                    match(input,30,FOLLOW_30_in_compoundType292); if (failed) return tn;
                    if ( backtracking==0 ) {
                       tn = new TypeNode(new ArrayType(), t.type, i, t.line, t.offset); 
                    }

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return tn;
    }
    // $ANTLR end compoundType


    // $ANTLR start identifier
    // ulNoActions.g:82:1: identifier returns [Identifier i] : ID ;
    public final Identifier identifier() throws RecognitionException {
        Identifier i = null;

        Token ID1=null;

        try {
            // ulNoActions.g:82:34: ( ID )
            // ulNoActions.g:83:3: ID
            {
            ID1=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_identifier311); if (failed) return i;
            if ( backtracking==0 ) {
               i = new Identifier(ID1.getText(), ID1.getLine(), ID1.getCharPositionInLine()); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return i;
    }
    // $ANTLR end identifier


    // $ANTLR start type
    // ulNoActions.g:86:1: type returns [TypeNode ty] : t= TYPE ;
    public final TypeNode type() throws RecognitionException {
        TypeNode ty = null;

        Token t=null;

        try {
            // ulNoActions.g:86:27: (t= TYPE )
            // ulNoActions.g:87:3: t= TYPE
            {
            t=(Token)input.LT(1);
            match(input,TYPE,FOLLOW_TYPE_in_type334); if (failed) return ty;
            if ( backtracking==0 ) {

                  if (t.getText().equals("void"))
                  {
                    ty = new TypeNode(new VoidType(), t.getLine(), t.getCharPositionInLine());
                  }
                  else if (t.getText().equals("int"))
                  {
                    ty = new TypeNode(new IntegerType(), t.getLine(), t.getCharPositionInLine());
                  }
                  else if (t.getText().equals("float"))
                  {
                    ty = new TypeNode(new FloatType(), t.getLine(), t.getCharPositionInLine());
                  }
                  else if (t.getText().equals("char"))
                  {
                    ty = new TypeNode(new CharType(), t.getLine(), t.getCharPositionInLine());
                  }
                  else if (t.getText().equals("string"))
                  {
                    ty = new TypeNode(new StringType(), t.getLine(), t.getCharPositionInLine());
                  }
                  else if (t.getText().equals("boolean"))
                  {
                    ty = new TypeNode(new BooleanType(), t.getLine(), t.getCharPositionInLine());
                  }
                
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ty;
    }
    // $ANTLR end type


    // $ANTLR start statement
    // ulNoActions.g:116:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | es= expressionStatement | is= ifStatement | ws= whileStatement | ps= printStatement | pls= printlnStatement | rs= returnStatement | as= assignmentStatement | aas= arrayAssignmentStatement );
    public final Statement statement() throws RecognitionException {
        Statement s = null;

        ExpressionStatement es = null;

        IfStatement is = null;

        WhileStatement ws = null;

        PrintStatement ps = null;

        PrintlnStatement pls = null;

        ReturnStatement rs = null;

        AssignmentStatement as = null;

        ArrayAssignmentStatement aas = null;


        try {
            // ulNoActions.g:116:63: ( ';' | es= expressionStatement | is= ifStatement | ws= whileStatement | ps= printStatement | pls= printlnStatement | rs= returnStatement | as= assignmentStatement | aas= arrayAssignmentStatement )
            int alt7=9;
            switch ( input.LA(1) ) {
            case 28:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred2()) ) {
                    alt7=2;
                }
                else if ( (synpred8()) ) {
                    alt7=8;
                }
                else if ( (true) ) {
                    alt7=9;
                }
                else {
                    if (backtracking>0) {failed=true; return s;}
                    NoViableAltException nvae =
                        new NoViableAltException("116:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | es= expressionStatement | is= ifStatement | ws= whileStatement | ps= printStatement | pls= printlnStatement | rs= returnStatement | as= assignmentStatement | aas= arrayAssignmentStatement );", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case STRINGCONSTANT:
            case INTEGERCONSTANT:
            case FLOATCONSTANT:
            case CHARACTERCONSTANT:
            case TRUE:
            case FALSE:
            case 23:
                {
                alt7=2;
                }
                break;
            case IF:
                {
                alt7=3;
                }
                break;
            case WHILE:
                {
                alt7=4;
                }
                break;
            case PRINT:
                {
                alt7=5;
                }
                break;
            case PRINTLN:
                {
                alt7=6;
                }
                break;
            case RETURN:
                {
                alt7=7;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return s;}
                NoViableAltException nvae =
                    new NoViableAltException("116:1: statement returns [Statement s] options {backtrack=true; } : ( ';' | es= expressionStatement | is= ifStatement | ws= whileStatement | ps= printStatement | pls= printlnStatement | rs= returnStatement | as= assignmentStatement | aas= arrayAssignmentStatement );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // ulNoActions.g:117:3: ';'
                    {
                    match(input,28,FOLLOW_28_in_statement367); if (failed) return s;
                    if ( backtracking==0 ) {
                       s = new ExpressionStatement(); 
                    }

                    }
                    break;
                case 2 :
                    // ulNoActions.g:118:5: es= expressionStatement
                    {
                    pushFollow(FOLLOW_expressionStatement_in_statement377);
                    es=expressionStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = es; 
                    }

                    }
                    break;
                case 3 :
                    // ulNoActions.g:119:5: is= ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement387);
                    is=ifStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = is; 
                    }

                    }
                    break;
                case 4 :
                    // ulNoActions.g:120:5: ws= whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement397);
                    ws=whileStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = ws; 
                    }

                    }
                    break;
                case 5 :
                    // ulNoActions.g:121:5: ps= printStatement
                    {
                    pushFollow(FOLLOW_printStatement_in_statement407);
                    ps=printStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = ps; 
                    }

                    }
                    break;
                case 6 :
                    // ulNoActions.g:122:5: pls= printlnStatement
                    {
                    pushFollow(FOLLOW_printlnStatement_in_statement417);
                    pls=printlnStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = pls; 
                    }

                    }
                    break;
                case 7 :
                    // ulNoActions.g:123:5: rs= returnStatement
                    {
                    pushFollow(FOLLOW_returnStatement_in_statement427);
                    rs=returnStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = rs; 
                    }

                    }
                    break;
                case 8 :
                    // ulNoActions.g:124:5: as= assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement437);
                    as=assignmentStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = as; 
                    }

                    }
                    break;
                case 9 :
                    // ulNoActions.g:125:5: aas= arrayAssignmentStatement
                    {
                    pushFollow(FOLLOW_arrayAssignmentStatement_in_statement447);
                    aas=arrayAssignmentStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = aas; 
                    }

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return s;
    }
    // $ANTLR end statement


    // $ANTLR start expressionStatement
    // ulNoActions.g:128:1: expressionStatement returns [ExpressionStatement es] : e= expr ';' ;
    public final ExpressionStatement expressionStatement() throws RecognitionException {
        ExpressionStatement es = null;

        Expression e = null;


        try {
            // ulNoActions.g:128:53: (e= expr ';' )
            // ulNoActions.g:129:3: e= expr ';'
            {
            pushFollow(FOLLOW_expr_in_expressionStatement468);
            e=expr();
            _fsp--;
            if (failed) return es;
            match(input,28,FOLLOW_28_in_expressionStatement470); if (failed) return es;
            if ( backtracking==0 ) {
               es = new ExpressionStatement(e); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return es;
    }
    // $ANTLR end expressionStatement


    // $ANTLR start assignmentStatement
    // ulNoActions.g:132:1: assignmentStatement returns [AssignmentStatement as] : ID '=' e= expr ';' ;
    public final AssignmentStatement assignmentStatement() throws RecognitionException {
        AssignmentStatement as = null;

        Token ID2=null;
        Expression e = null;

